[ServiceWorkerCacheWriter] fix update of bytes_compared_

This patch fixes the incorrect updating algorithm of |bytes_compared_|
in DoReadDataForCompareDone. This variable represents the amount of data
from the network which is confirmed to be identical with the cached data,
and is updated every time the comparison finishes for a chunk of data
from the network. Previously it was incremented only by the amount of
bytes read from the cache, which can be less than the size of the chunk
of data from the network in the cases where the cache writer does not
finish the comparison in single read from the cache because the network
data is too large.

Bug: 871655
Change-Id: Ie3e0f192713b5d38582628c72175e4f7aa6771da
Reviewed-on: https://chromium-review.googlesource.com/1172222
Reviewed-by: Hiroki Nakagawa <nhiroki@chromium.org>
Reviewed-by: Makoto Shimazu <shimazu@chromium.org>
Commit-Queue: Momoko Hattori <momohatt@google.com>
Cr-Commit-Position: refs/heads/master@{#584353}
Former-commit-id: 50b8e88d3a493c0437e540c972491dde155d3bd1